...

  @override
  Widget build(BuildContext context) {
    return Consumer<WalletModel>(
      builder: (context, wallet, child) {
        return AlertDialog(
          title: const Text("Wallet Information"),
          content: const SingleChildScrollView(
            child: Text(
                "Since this app is based on GPT, it costs some small amount in "
                "server fees per request. I'm not trying to make money with this "
                "app, so the wallet balance is just required to cover those "
                "server costs + a small margin. Costs are really low, so \$1 "
...
                  onPressed: action,
                  child: Text(text),
                );
              },
            ),
            FilledButton(
              child: const Text("Close"),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
          ],
        );
...
