...
    return WillPopScope(
      onWillPop: () async {
        _showSecondWarning();
        return false;
      },
      child: AlertDialog(
        title: const Text("Back-Up Your Account"),
        content: Text(
          _secondWarningShown
              ? "Are you sure you want to continue without backing up your account? We will not be able to recover your account for you."
              : "You are using a temporary, auto-generated account. If you lose access to this device or delete this app, you will not be able to recover your wallet. Would you like to back-up your account by adding your email?",
        ),
        actions: <Widget>[
...
